--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -10,7 +10,9 @@
 </head>
 <body>
     <div class="home-page">
+        <h1>Way2AgriTech</h1>
         <img src="{% static 'core/agritech.png' %}" alt="Logo" class="logo">
+        <p>Backend Django Rest API</p>
     </div>
 </body>
 </html>
